@@ -14,6 +14,7 @@ $this->widget('zii.widgets.grid.CGridView', array(
 		'columns'=>array(
 			array(
 				'name'=>'id',
+				'filter' => false,
 				'type'=>'raw',
 				'value'=>'CHtml::link(CHtml::encode($data->id),
 				array(Yum::route("{user}/update"),"id"=>$data->id))',
@@ -26,20 +27,25 @@ $this->widget('zii.widgets.grid.CGridView', array(
 			),
 			array(
 				'name'=>'createtime',
+				'filter' => false,
 				'value'=>'date(UserModule::$dateFormat,$data->createtime)',
 			),
 			array(
 				'name'=>'lastvisit',
+				'filter' => false,
 				'value'=>'date(UserModule::$dateFormat,$data->lastvisit)',
 			),
 			array(
 				'name'=>'status',
+				'filter' => false,
 				'value'=>'YumUser::itemAlias("UserStatus",$data->status)',
 			),
 			array(
-				'name'=>'superuser',
-				'value'=>'YumUser::itemAlias("AdminStatus",$data->superuser)',
-			),
+				'name'=>Yum::t('Roles'),
+				'type' => 'raw',
+				'filter' => false,
+				'value'=>'$data->getRoles()',
+			), 
 			array(
 				'class'=>'CButtonColumn',
 			),
